Javac2007/src/test/attr/error/cyclic_inheritance.java
package test.attr.error;
public class cyclic_inheritance extends cyclic_inheritance {}
/*
public class cyclic_inheritance extends cyclic_inheritance2 {}
class cyclic_inheritance2 extends cyclic_inheritance {}
*/